# beyond-qr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  pages.yml
app/: .gitignore  README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/app/beyondqr/beyond_qr/: MainActivity.kt
app/integration_test/: simple_test.dart
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: calibration_screen.dart  history_screen.dart  history_store.dart  main.dart  protocol.dart  receive_screen.dart  send_screen.dart  vcode_receive_screen.dart  vcode_send_screen.dart  vcode_view.dart
app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/src/rust/api/: fountain.dart  qr.dart  vcode.dart
app/rust/: Cargo.toml
app/rust/src/: frb_generated.rs
app/rust/src/api/: fountain.rs  mod.rs  qr.rs  vcode.rs
app/rust_builder/: pubspec.yaml
app/rust_builder/android/: build.gradle  settings.gradle
app/rust_builder/android/src/main/: AndroidManifest.xml
app/rust_builder/ios/: rust_lib_beyond_qr.podspec
app/rust_builder/linux/: CMakeLists.txt
app/rust_builder/macos/: rust_lib_beyond_qr.podspec
app/rust_builder/windows/: CMakeLists.txt
app/test/: fountain_roundtrip_test.dart  streaming_test.dart  widget_test.dart
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/windows/runner/: Runner.rc  main.cpp
core/: Cargo.toml
core-ffi/: Cargo.toml
core-ffi/src/: lib.rs
core-py/: Cargo.toml  pyproject.toml
core-py/src/: lib.rs
core-wasm/: Cargo.toml
core-wasm/src/: lib.rs
core/src/: color_space.rs  decoder.rs  ecc.rs  encoder.rs  frame.rs  lib.rs  palette.rs
core/tests/: roundtrip.rs
docs/: related_work.html  vcode_format.md  vcode_format_v0.md
fountain/: Cargo.toml
fountain/src/: lib.rs
qr_bench/: qr_bench.py
receiver/: README.md  pubspec.yaml
receiver/lib/: beyond_qr_receiver.dart
receiver/lib/src/: bridge.dart  png_decoder.dart
receiver/test/: decode_png_test.dart  widget_test.dart
receiver/windows/: CMakeLists.txt
receiver/windows/runner/: Runner.rc  main.cpp
sender/: pyproject.toml
sender/beyond_qr_sender/: __init__.py  color.py  decode.py  distort.py  encode.py  geometry.py  render.py
sender/scripts/: baseline_report.py  calibration_impact.py  comparison_report.py  debug_blind_perspective.py  debug_finder_detect.py  debug_perspective.py
sender/tests/: test_calibration.py  test_perspective_blind.py  test_perspective_known.py  test_png_roundtrip.py
vcode/: Cargo.toml
vcode/examples/: debug_scan.rs  gray2png.rs  render_samples.rs  render_stream.rs
vcode/src/: lib.rs  scan.rs
vcode/tests/: fountain_roundtrip.rs  scan_synthetic.rs
web/: README.md  algo.js  display.html  index.html  manifest.json  qr_util.js  receiver.html  sender.html  serve_https.py  test_algo.html  test_cell_diff.html  test_detect_debug.html  test_multiqr.html  test_phase1.html  test_quietzone.html  test_real_capture.html  test_robust.html  test_wasm.html
web/pwa/: app.js  calibration.js  index.html  manifest.webmanifest  protocol.js  receiver.js  sender.js  sw.js  vcode.js
