[workspace]
members = ["core-wasm", "fountain"]
# app/ 配下の Flutter ブリッジ crate (rust_lib_beyond_qr) は cargokit が独立ビルドするため除外。
# ../../fountain への path 依存で本ワークスペースのコアを再利用する。
exclude = ["app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# wasm バイナリを最小化 (core-wasm の release ビルド向け)。
# ワークスペース直下に置かないと非 root パッケージのプロファイルは無視される。
[profile.release]
opt-level = "z"
lto = true
