[package]
name = "beyond-qr-core-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI bindings for beyond-qr-core (Dart FFI / flutter_rust_bridge 向け)。"

[lib]
name = "beyond_qr_core_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
beyond-qr-core = { path = "../core" }
