[package]
name = "beyond-qr-core-py"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for beyond-qr-core (optical data transmission)."

[lib]
name = "beyond_qr_core"
crate-type = ["cdylib"]

[dependencies]
beyond-qr-core = { path = "../core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
