[package]
name = "beyond-qr-core-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for beyond-qr-core (wasm-bindgen 経由でブラウザから呼ぶ)。"

[lib]
name = "beyond_qr_core_wasm"
crate-type = ["cdylib"]

[dependencies]
beyond-qr-core = { path = "../core" }
beyond-qr-fountain = { path = "../fountain" }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
