[package]
name = "beyond-qr-core-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for beyond-qr Fountain code (wasm-bindgen 経由でブラウザから呼ぶ)。"

[lib]
name = "beyond_qr_core_wasm"
crate-type = ["cdylib"]

[dependencies]
beyond-qr-fountain = { path = "../fountain" }
wasm-bindgen = "0.2"
