[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beyond-qr-sender"
version = "0.1.0"
description = "PC sender app for beyond-qr (encode bytes into Phase 0 PNG frames)."
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.26",
]

[project.scripts]
beyond-qr-encode = "beyond_qr_sender.encode:main"
beyond-qr-decode = "beyond_qr_sender.decode:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["beyond_qr_sender"]
